Add g16.nbo6prop, update version
- new script to write a Gaussian property calculation input file for
  NBO6 (external program needed)
- update manual to include new script
- update readme file
- update refsheet and rearrange to fit on two pages
- update version
- update year in all scripts

--- a/docs/src/manual/lstdefs.tex
+++ b/docs/src/manual/lstdefs.tex
@@ -9,6 +9,7 @@
     g16.optinput.sh,    g16.optinput,  
     g16.prepare.sh,     g16.prepare,
     g16.spinput.sh,     g16.spinput,
+    g16.nbo6prop.sh,    g16.nbo6prop,
     g16.submit.sh,      g16.submit,
     g16.testroute.sh,   g16.testroute,  
     g16.wrapper.sh,     g16.wrapper,
