--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -36,7 +36,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.3.1, 2019-09-11)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.3.2, 2020-01-16)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -62,7 +62,7 @@ I apologise for the inconvenience.
 \section{License (GNU General Public License v3.0)}
 
 tools-for-g16.bash - A collection of tools for the help with Gaussian 16.
-Copyright (C) 2019 Martin C Schwarzer
+Copyright (C) 2019-2020 Martin C Schwarzer
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
